Add a custom header JWT, remove unused imports and suppress some warning